Bug 590035. Middle clicking tab bar with custom window drawing does not open a new tab. r=jmathies a=blocking-final